& added Query to get score par metier